# grants_tagger

./: .dockerignore  .envrc  .envrc.template  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.sagemaker_inference  Dockerfile.streamlit  Dockerfile.xlinear  LICENSE  MANIFEST.in  Makefile  Makefile.streamlit  README.md  dev_requirements.txt  dvc.yaml  params.yaml  pull_request_template.md  pyproject.toml  requirements.txt  requirements_scispacy.txt  sagemaker_build_and_push.sh  sample.ini  scispacy_requirements.txt  setup.py  tox.ini  train-slack-notify.sh  unpinned_dev_requirements.txt  unpinned_requirements.txt  unpinned_test_requirements.txt
.dvc/: config
configs/: 2020.02.0.ini  2020.02.1.ini  2020.02.2.ini  2020.03.0.ini  2020.03.1.ini  2020.03.2.ini  2020.03.3.ini  2020.03.4.ini  2020.03.5.ini  2020.03.6.ini  2020.03.7.ini  2020.04.0.ini  2020.04.1.ini  2020.04.2.ini  2020.04.3.ini  2020.05.0.ini  2020.05.1.ini  2020.05.2.ini  2020.05.3.ini  2020.05.4.ini  2020.05.5.ini  2020.05.6.ini  2020.05.7.ini  2020.05.8.ini  2020.05.9.ini  2020.06.0.ini  2020.06.1.ini  2020.06.2.ini  2020.06.3.ini  2020.10.0.ini  2020.10.1.ini  2020.10.13.ini  2020.10.14.ini  2020.10.15.ini  2020.10.16.ini  2020.10.17.ini  2020.10.3.ini  2020.10.7.ini  2020.10.8.ini  2021.03.0.ini  (+1 more)
docs/: literature_review.md  mesh_results.md  mesh_threshold.md  old_results.md  papers.md  results.md  science_results.md
figures/: threshold_per_average_html.html
grants_tagger/: __init__.py  __main__.py  bilstm.py  calculate_metrics.py  cli.py  create_inclusion_list.py  create_label_binarizer.py  create_mesh_label_binarizer.py  create_prodigy_data.py  download_epmc.py  download_model.py  evaluate_cnn.py  evaluate_ensemble.py  evaluate_human.py  evaluate_mesh_on_grants.py  evaluate_model.py  evaluate_mti.py  evaluate_pubs.py  evaluate_xlinear.py  (+37 more)
(+187 files in other folders)
