[tool.poetry]
name = "grants-tagger"
version = "0.1.0"
description = "A machine learning model to tag grants. You can find more information on https://github.com/wellcometrust/grants_tagger"
authors = ["Arne Robben <a.robben@wellcome.ac.uk>"]
readme = "README.md"
packages = [{include = "grants_tagger"}]

[tool.poetry.dependencies]
python = "^3.8"
xlrd = "*"
numpy = "*"
pandas = "*"
PyYAML = "*"
tqdm = "*"
requests = "*"
scikit-learn = "1.0.0"
typer = "0.4.2"
wasabi = "*"
transformers = "4.4.2"
streamlit = "*"
openpyxl = "^3.1.2"
pre-commit = "*"
tensorflow = "2.4.0"
scikit-multilearn = "*"
packaging = "21.3"
torch = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
libpecos = "0.3.0"
scispacy = "^0.5.2"
gensim = "4.0.0"
docutils = "0.15"
wellcomeml = "2.0.3"
wandb = "*"
accelerate = "*"
sagemaker = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grants_tagger = "grants_tagger.__main__:app"
